--- a/htm.html
+++ b/htm.html
@@ -32,7 +32,7 @@
         <div>
             <button type="submit">Submit</button>
             <button type="reset">Reset</button>
-            <button type="reset">Reset</button>
+            <button type="reset">Reset is for losers</button>
         </div>
         
     </form>
