--- a/htm.html
+++ b/htm.html
@@ -36,5 +36,24 @@
         </div>
         
     </form>
+
+    <table>
+        <tr>
+            <th>Black</th>
+            <th>White</th>
+        </tr>
+        <tr>
+            <td>Michael</td>
+            <td>Jackson</td>
+        </tr>
+       
+    </table>
+<div class="lh">
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione eius quibusdam ut, maiores quasi, iure architecto, necessitatibus sed culpa maxime distinctio ipsa nam repellat nostrum laboriosam tempora. Mollitia, pariatur velit!</p>
+    <p class="line-height">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reiciendis sequi est modi, temporibus eaque fugiat molestias obcaecati distinctio cupiditate. Beatae itaque eum eos deserunt illo consequatur quisquam similique dolorum adipisci.</p>
+</div>
+<p class="white-text-with-blue-shadow">Sed ut perspiciatis unde omnis iste
+    natus error sit voluptatem accusantium doloremque laudantium,
+    totam rem aperiam, eaque ipsa quae ab illo inventore.</p>
 </body>
 </html>
