--- a/htm.html
+++ b/htm.html
@@ -55,5 +55,27 @@
 <p class="white-text-with-blue-shadow">Sed ut perspiciatis unde omnis iste
     natus error sit voluptatem accusantium doloremque laudantium,
     totam rem aperiam, eaque ipsa quae ab illo inventore.</p>
+
+    <div class="brdr">
+        <p class="white-text-with-blue-shadow">
+            Hey, this is my text in a box
+        </p>
+    </div>
+    <div class="box1">
+        <p>SushiSwap</p>
+    </div>
+    <div class="box1">
+        <p>PancakeSwap</p>
+    </div>
+    <div class="div1 alldiv">DIV ONE</div>
+    <div class="alldiv div2">DIV TWO</div>
+    <div class="alldiv div3">DIV THREE</div>
+
+    <div class="flxcont">
+        <div class="cl1"></div>
+        <div class="cl2"></div>
+        <div class="cl3"></div>
+        
+    </div>
 </body>
 </html>
