done 4 today, hw tmao

--- a/htm.html
+++ b/htm.html
@@ -77,5 +77,11 @@
         <div class="cl3"></div>
         
     </div>
+
+    <div class="container">
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
+    </div>
 </body>
 </html>
